# atomic-forge

./: .dockerignore  .env.example  .gitignore  .tool-versions  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  RustConfig  docker-compose.test.yml  docker-compose.yml
atomic-decay/: .env.example  .tool-versions  BUILD_INSTRUCTIONS.md  CLAUDE.md  CUSTOMIZATION.md  Cargo.toml  Makefile  README.md  build.sh  esbuild.mjs  install.json  package-lock.json  package.json  run_test.sh  test_routes.sh  types.d.ts  vite.config.js
atomic-decay/.cargo/: config.toml
atomic-decay/.sqlx/: query-09e2b65c38536256acb5281ecc9efbd94efa856c0616ed7438e8edf0e41c1b4a.json  query-1936a026f833f4b64843c88198484ea6942ceba48283cf12f60d79efbeb96aff.json  query-2e4349a451cda45f953d2c83579b7363f2dc552a5ed55f52e2fa00ed23db73a1.json  query-30ee014511491a7cfb17c39db16ff71485e09e75cae03e661a13257505994e91.json  query-34fde8881baaf2513540fecd3ee78d2a926cc150afdcabb5fb18ee1d47bbc355.json  query-3659e25e66394d86c2c18d38834ed2031d49f7c0efb37b88fcb7e26b44eb1bf8.json  query-372f5978559bc407aefdc526bb7b3c3b506786c80fbe880b78212f381b093d2b.json  query-4226929ad2e96917ad7ee0770cbcead86c925cdeaa66fc369df158b4ec3957d5.json  query-47ce83210e1dcb1f765ee0c83bcf1bf199b303ecd1d52efd3f87c538099a3d5f.json  query-49ce833aec046829e7901cce53a395a9136419a90c707ff80013b1e8db8c1cdc.json  query-6069b84a0cdbc84bbefeb5d6c47200e8804f157c828cdf0135af8e6ea6161d9c.json  query-6309f4cfc5917c6fabb9a2f010b01c2e5de9ba004516894c9439add03c8b74d6.json  query-662a2d797b69e8e1c66d5ea72fe89334e1933452f03bf68ee500f9d2b95f762a.json  query-847c8639ac246e35b5ab310a50132de12878a641673924b54ceeba678a631c3c.json  query-8e37e853caae82f16b04f8049072000288f37748bb8f55deb5a713fb1d5c353f.json  query-933694aa748dfa69390d67c1f6146f6e0fcc7e4ae492b1365c94aed81638de99.json  query-93af7e6f6f6a871c51b3623c8626640541c4d8ee498db511d7b00c63e30c37df.json  query-98bae730ba215e95be91e12e3072a5dcf3df06ebc99f6f66379a9e21505e2fbc.json  query-9f5edb8c38b27df98801fbae261abbedf900eb3ebb3e7349753372ae10bce649.json  query-a281105b4593a366029ff9c5580c74a7fd699c16f1ccfcefd86b0f75ba3309ab.json  query-abd96ede17270f16e02e87954c3609e8fd6e05f04b5012bd1c580cd02fad2b3b.json  query-c19e0bc4df7a1e28db08edae7e773b427c22473792637d8071371d65d7ce41c3.json  query-c42e77260630727129331f1eb57e5b615362176ba85b5bf25e1c0cbaa301d574.json  query-c8b33e5cec4b37536d8130b211f0e24f7aea8f53075b3648bb15b3d418a7fd2a.json  query-cdaf9a2dfb45d1bff643b68b9b63e677f4b0dc2931b057487fe3f8045c492c6a.json
atomic-decay/client/: app.ts
atomic-decay/config/: secrets.json.example
atomic-decay/docs/: TESTING.md
atomic-decay/docs/plans/: 2026-04-25-atomic-decay-deep-linking-tester.md  2026-04-25-atomic-decay-nrps-tester.md
atomic-decay/docs/specs/: 2026-04-25-atomic-decay-spec-tester-design.md  2026-04-26-atomic-lti-asset-processor-protocol-design.md
atomic-decay/migrations/: 20230927003030_create_keys.sql  20230927003043_create_oidc_states.sql  20241125000000_add_nonce_to_oidc_states.sql  20250723230818_create_lti_platforms.sql  20250723230850_create_lti_registrations.sql  20251022225227_add_jsonb_fields_to_lti_registrations.sql  20251022234812_add_issuer_to_oidc_states.sql  20251023002006_create_tenants.sql  20251023002007_create_courses.sql  20251023002008_create_users.sql
atomic-decay/migrations/2023-09-27-003030_create_keys/: up.sql
atomic-decay/migrations/2023-09-27-003043_create_oidc_states/: down.sql
atomic-decay/scripts/: create-migration.sh  init-new-app.sh  new-app-from-template.sh  reset-db.sh  setup-db.sh  test-db-reset.sh  test-db-setup.sh  test-serial.sh  test-with-db.sh
atomic-decay/src/: config.rs  db.rs  defines.rs  errors.rs  extractors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  seed_platforms.rs  stores.rs  test_helpers.rs  test_utils.rs  tests.rs  types.rs
atomic-decay/src/extractors/: app_context.rs  host_info.rs  jwt_claims.rs
atomic-decay/src/handlers/: assets.rs  index.rs  launch_diagnostics.rs  lti.rs  lti_services.rs
atomic-decay/src/models/: course.rs  key.rs  lti_platform.rs  lti_registration.rs  oidc_state.rs  tenant.rs  user.rs
atomic-decay/src/services/: lti_provisioning.rs  mod.rs
atomic-decay/src/stores/: db_dynamic_registration.rs  db_key_store.rs  db_oidc_state_store.rs  db_platform_store.rs  db_registration_store.rs  tool_jwt_store.rs
atomic-decay/tests/: README.md  lti_dynamic_registration_test.rs  lti_oidc_flow_test.rs  lti_provisioning_test.rs  lti_stores_test.rs  test_assets_route.rs  test_database.rs  test_health.rs  test_key_store.rs
atomic-lti/: Cargo.toml  Makefile  README.md
atomic-lti-test/: Cargo.toml  Makefile  README.md
atomic-lti-test/src/: helpers.rs
atomic-lti-tool/: Cargo.toml  Makefile  README.md
atomic-lti-tool-axum/: Cargo.toml  Makefile  README.md
atomic-lti-tool-axum/docs/: implementation-plan.md
atomic-lti-tool-axum/src/: errors.rs  handlers.rs  html.rs  lib.rs  middleware.rs  url.rs  validation.rs
atomic-lti-tool-axum/tests/: test_init_handler.rs  test_jwks_handler.rs  test_launch_handler.rs  test_redirect_handler.rs
atomic-lti-tool/src/: errors.rs  handlers.rs  html.rs  lib.rs  middleware.rs  tool_jwt.rs  url.rs
atomic-lti/src/: assignment_grade_services.rs  client_credentials.rs  constants.rs  deep_linking.rs  dynamic_registration.rs  errors.rs  html.rs  id_token.rs  jwks.rs  jwt.rs  lib.rs  lti_definitions.rs  names_and_roles.rs  oidc.rs  params.rs  platform_storage.rs  platforms.rs  request.rs  roles.rs  secure.rs  stores.rs  url.rs  validate.rs
atomic-oxide/: .env.example  .tool-versions  CLAUDE.md  Cargo.toml  Makefile  README.md  esbuild.mjs  install.json  package-lock.json  package.json  tsconfig.json  types.d.ts
atomic-oxide/.cargo/: config.toml
atomic-oxide/client/: app.ts
atomic-oxide/docs/: TEST_DATABASE_SETUP.md
atomic-oxide/scripts/: setup-db.sh  test-db-reset.sh  test-db-setup.sh  test-with-db.sh
atomic-oxide/src/: config.rs  db.rs  defines.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs  seed_platforms.rs  stores.rs
kanidm/: server.toml
(+118 files in other folders)
