[package]
name = "atomic-decay"
version = "1.1.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
rust-version = "1.71"

[lib]
name = "atomic_decay"
path = "src/lib.rs"

[[bin]]
name = "atomic-decay"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "normalize-path"] }
hyper = { version = "1.6", features = ["full"] }
tokio = { version = "1.46", features = ["full"] }
atomic-lti = { path = "../atomic-lti" }
atomic-lti-tool-axum = { path = "../atomic-lti-tool-axum" }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
jsonwebtoken = "9.3"
lazy_static = "1.5"
log = "0.4"
listenfd = "1.0"
num_cpus = "1.17"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
url = "2.5"
openssl = "0.10"
thiserror = "2.0"
rand = "0.9"
include_dir = "0.7"
mime_guess = "2.0"
tracing-subscriber = "0.3.19"

[dev-dependencies]
atomic-lti-test = { path = "../atomic-lti-test" }
mockito = "1.7"
serde_urlencoded = "0.7"
tower = { version = "0.5", features = ["util"] }
