[package]
name = "atomic-lti-test"
version = "2.1.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
description = "Helpers for writing tests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomicjolt/atomic-forge"
homepage = "https://github.com/atomicjolt/atomic-forge"
documentation = "https://docs.rs/atomic-lti"
readme = "README.md"


[dependencies]
async-trait = "0.1"
atomic-lti = { path = "../atomic-lti", version = "2.2.0" }
chrono = "0.4"
derive_more = { version = "2", features = ["full"] }
jsonwebtoken = "10.1"
mockito = "1.7"
openssl = { version = "0.10", features = ["vendored"] }
phf = { version = "0.13", features = ["macros"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }
