[package]
name = "atomic-lti-tool-axum"
version = "1.0.0"
edition = "2021"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
description = "LTI Tool related functionality for Axum"

[dependencies]
atomic-lti = { path = "../atomic-lti" }
atomic-lti-tool = { path = "../atomic-lti-tool" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
urlencoding = "2.1"
htmlescape = "0.3"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9.3"
base64 = "0.22"
cached = { version = "0.56", features = ["async"] }
cookie = "0.18"
derive_more = { version = "2.0.1", features = ["from", "display"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
atomic-lti-test = { path = "../atomic-lti-test" }
axum-test = "17.3"
tower-service = "0.3"
http-body-util = "0.1"
mime = "0.3"
