[package]
name = "atomic-lti-tool-axum"
version = "1.0.0"
edition = "2021"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
description = "LTI Tool related functionality for Axum"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomicjolt/atomic-forge"
homepage = "https://github.com/atomicjolt/atomic-forge"
documentation = "https://docs.rs/atomic-lti"
readme = "README.md"
keywords = ["lti", "education", "learning", "ims", "oauth"]
categories = ["web-programming", "authentication"]

[dependencies]
atomic-lti = "2.2.0"
atomic-lti-tool = "2.2.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
urlencoding = "2.1"
htmlescape = "0.3"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "10.1"
base64 = "0.22"
cached = { version = "0.56", features = ["async"] }
cookie = "0.18"
derive_more = { version = "2.0.1", features = ["from", "display"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
atomic-lti-test = "2.1.0"
axum-test = "18.2"
tower-service = "0.3"
http-body-util = "0.1"
mime = "0.3"
mockito = "1.7"
