[package]
name = "atomic-lti-tool"
version = "1.0.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
description = "LTI Tool related functionality"

[dependencies]
actix-web = "4.4"
atomic-lti = { path = "../atomic-lti" }
base64 = "0.21"
cached = { version = "0.46", features = ["async"]}
chrono = "0.4"
cookie = "0.18"
derive_more = "0.99"
jsonwebtoken = "8.3"
openssl = { version = "0.10", features = ["vendored"] }
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive", "strum_macros"] }
strum_macros = "0.25"
thiserror = "1.0"
url = "2.4"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
atomic-lti-test = { path = "../atomic-lti-test" }
mockito = "1.2.0"
