[package]
name = "atomic-lti-tool"
version = "1.0.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
description = "LTI Tool related functionality"

[dependencies]
actix-web = "4.11"
atomic-lti = { path = "../atomic-lti" }
base64 = "0.22"
cached = { version = "0.55", features = ["async"] }
chrono = "0.4"
cookie = "0.18"
derive_more = { version = "2", features = ["full"] }
jsonwebtoken = "9.3"
openssl = { version = "0.10", features = ["vendored"] }
phf = { version = "0.12", features = ["macros"] }
rand = "0.9"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.17", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
atomic-lti-test = { path = "../atomic-lti-test" }
mockito = "1.7"
tokio = "1.40"
