[package]
name = "atomic-lti"
version = "2.2.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
description = "A collection of LTI related functionality"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomicjolt/atomic-forge"
homepage = "https://github.com/atomicjolt/atomic-forge"
documentation = "https://docs.rs/atomic-lti"
readme = "README.md"
keywords = ["lti", "education", "learning", "ims", "oauth"]
categories = ["web-programming", "authentication"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
cached = { version = "0.56", features = ["async"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2", features = ["full"] }
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
openssl = { version = "0.10", features = ["vendored"] }
phf = { version = "0.13", features = ["macros"] }
rand = { version = "0.9", features = ["std_rng"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
url = "2.5"
uuid = { version = "1.17", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
mockito = "1.7"
