[package]
name = "atomic-oxide"
version = "1.0.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
actix-cors = "0.6"
actix-web = "4"
atomic-lti = { path = "../atomic-lti" }
atomic-lti-tool = { path = "../atomic-lti-tool" }
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
jsonwebtoken = "8.0"
lazy_static = "1.4"
log = "0.4"
listenfd = "1.0"
num_cpus = "1.13"
r2d2 = "0.8"
r2d2-diesel = "1.0"
regex = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"]}
url = "2.4"
openssl = "0.10.57"
thiserror = "1.0.48"
rand = "0.8.5"
include_dir = "0.7.3"
mime_guess = "2.0.4"

[dev-dependencies]
atomic-lti-test = { path = "../atomic-lti-test" }
mockito = "1.2"
