[package]
name = "atomic-oxide"
version = "1.1.0"
authors = ["Justin Ball <justin.ball@atomicjolt.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
atomic-lti = { path = "../atomic-lti" }
atomic-lti-tool = { path = "../atomic-lti-tool" }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
jsonwebtoken = "9.3"
lazy_static = "1.5"
log = "0.4"
listenfd = "1.0"
num_cpus = "1.13"
r2d2 = "0.8"
r2d2-diesel = "1.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }
url = "2.5"
openssl = "0.10"
thiserror = "2.0"
rand = "0.9"
include_dir = "0.7"
mime_guess = "2.0"

[dev-dependencies]
atomic-lti-test = { path = "../atomic-lti-test" }
mockito = "1.6"
